--- a/app/src/main/res/layout/activity_pet_list.xml
+++ b/app/src/main/res/layout/activity_pet_list.xml
@@ -19,15 +19,16 @@
         android:textSize="36sp" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/petImageView"
         android:layout_width="150dp"
         android:layout_height="150dp"
         app:srcCompat="@drawable/none" />
 
     <Button
+        android:id="@+id/addPetButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/add_button_text"/>
+        android:text="@string/add_button_text" />
 
 
 </LinearLayout>
