--- a/app/src/main/res/layout/pet_list_item.xml
+++ b/app/src/main/res/layout/pet_list_item.xml
@@ -5,6 +5,7 @@
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
     <ImageView
+        android:id="@+id/petListImageView"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:contentDescription="@string/photo"
