Add addPet to onClick for button

--- a/app/src/main/res/layout/activity_pet_list.xml
+++ b/app/src/main/res/layout/activity_pet_list.xml
@@ -50,7 +50,8 @@
         android:id="@+id/addPetButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/add_button_text" />
+        android:onClick="addPet"
+        android:text="@string/add_button_text"/>
 
     <ListView
         android:id="@+id/petsListView"
