--- a/app/src/main/res/layout/activity_pet_details.xml
+++ b/app/src/main/res/layout/activity_pet_details.xml
@@ -12,7 +12,7 @@
     <ImageView
         android:id="@+id/petImageView"
         android:layout_width="300dp"
-        android:layout_height="wrap_content"
+        android:layout_height="300dp"
         android:contentDescription="@string/photo"
         app:srcCompat="@drawable/none"/>
 
